# cs-s7

./: .gitmodules  CMakeLists.txt  README.md
cmake/Modules/: FindCSOUND.cmake
examples/: test-opc.scm  test-sync.scm  test.scm
src/: cs-s7-nrepl.h  cs-s7.c  cs-s7.h  interface.c  main.c  main_nrepl.c
